# continuum

./: .dockerignore  .gitignore  CLAUDE.md  CLI.md  Dockerfile  Makefile  REACHY.md  README.md  SERVER.md  SETUP.md  docker-compose.yaml
assets/audio/: README.md
docker/: README.md  entrypoint.sh
lib/: Makefile  pyproject.toml
lib/src/continuum/: __init__.py  constants.py  continuum.py  models.py  utils.py
lib/src/continuum/agent/: __init__.py  agent_runner.py  agent_tools.py  models.py  pydantic_agent_runner.py
lib/src/continuum/apps/: models.py
lib/src/continuum/asr/: __init__.py  asr_client.py  fake_asr_client.py  faster_whisper_client.py  fasterwhisper_asr_client.py  models.py  openai_asr_client.py
lib/src/continuum/audio/: __init__.py  audio_io.py  audio_manager.py  constants.py
lib/src/continuum/cli/: __init__.py  agent.py  asr.py  llm.py  mic.py  tts.py  vad.py  ws.py
lib/src/continuum/client/: __init__.py  client.py
lib/src/continuum/llm/: __init__.py  fake_llm_client.py  google_llm_client.py  llm_client.py  models.py  ollama_llm_client.py  openai_llm_client.py
lib/src/continuum/mic/: __init__.py  gstreamer_interface.py  mic_interface.py  models.py  picovoice_interface.py  pyaudio_interface.py
lib/src/continuum/tts/: __init__.py  elevenlabs_tts_client.py  kokoro_tts_client.py  models.py  tts_client.py
lib/src/continuum/vad/: __init__.py  models.py  naive_vad_client.py  picovoice_vad_client.py  silero_vad_client.py  vad_client.py
scripts/: Makefile  README.md  baseline.py  baseline.txt
workspace/: Makefile
workspace/src/continuum_core/: package.xml  setup.cfg  setup.py
workspace/src/continuum_core/continuum_core/agent/: __init__.py  base_agent_node.py  pydantic_agent_node.py
workspace/src/continuum_core/continuum_core/apps/: base_app_node.py  dictation_app_node.py
workspace/src/continuum_core/continuum_core/asr/: base_asr_node.py  fake_asr_node.py  faster_whisper_asr_node.py  fasterwhisper_asr_node.py  openai_asr_node.py
workspace/src/continuum_core/continuum_core/health/: echo_node.py  heartbeat_node.py
workspace/src/continuum_core/continuum_core/input/: joystick_node.py
workspace/src/continuum_core/continuum_core/llm/: base_llm_node.py  fake_llm_node.py  google_llm_node.py  mapgpt_llm_node.py  ollama_llm_node.py  openai_llm_node.py
workspace/src/continuum_core/continuum_core/mic/: __init__.py  base_mic_node.py  gstreamer_mic_node.py  picovoice_mic_node.py  pyaudio_mic_node.py
workspace/src/continuum_core/continuum_core/prompts/: dictation.py
workspace/src/continuum_core/continuum_core/reachy/: models.py  prompts.py  reachy_listens.py  reachy_moves.py  reachy_node.py  reachy_sees.py  reachy_speaks.py
workspace/src/continuum_core/continuum_core/shared/: __init__.py  async_node.py  base_node.py  queue_node.py  ros_log_handler.py  utils.py
workspace/src/continuum_core/continuum_core/tts/: base_tts_node.py  elevenlabs_tts_node.py  kokoro_tts_node.py
workspace/src/continuum_core/continuum_core/vad/: __init__.py  base_vad_node.py  naive_vad_node.py  picovoice_vad_node.py  silero_vad_node.py
workspace/src/continuum_deck/: package.xml  setup.cfg  setup.py
workspace/src/continuum_deck/test/: test_xmllint.py
workspace/src/continuum_desktop/: package.xml  setup.cfg  setup.py
workspace/src/continuum_desktop/config/: continuum.yaml
workspace/src/continuum_desktop/launch/: launch_agent.py  launch_desktop.py  launch_desktop_with_bridge.py  launch_desktop_with_fakes.py  launch_desktop_with_foxglove.py  launch_docker.py  launch_mapbox.py  launch_reachy.py
workspace/src/continuum_interfaces/: CMakeLists.txt  package.xml
workspace/src/continuum_interfaces/msg/: AgentRequest.msg  AgentResponse.msg  AgentStreamingResponse.msg  AsrRequest.msg  AsrResponse.msg  AsrStreamingResponse.msg  DictationRequest.msg  DictationResponse.msg  DictationStreamingResponse.msg  EchoRequest.msg  EchoResponse.msg  JoystickAxisEvent.msg  JoystickButtonEvent.msg  LlmRequest.msg  LlmResponse.msg  LlmStreamingResponse.msg  MicRequest.msg  MicResponse.msg  MicStreamingResponse.msg  TtsRequest.msg  TtsResponse.msg  TtsStreamingResponse.msg  VadRequest.msg  VadResponse.msg  VadStreamingResponse.msg
