[project]
name = "continuum"
version = "0.1.0"
description = "Continuum Python SDK"
authors = [{name = "Antonio Zugaldia"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

# Dependencies are pinned to minor versions (~=X.Y) to only allow patch releases
dependencies = [
    "faster-whisper~=1.2",
    "google-genai~=1.56",
    "ollama~=0.6",
    "openai~=2.14",
    "pydantic~=2.12",
    "roslibpy~=2.0",
    "typer~=0.20",
]

[project.scripts]
continuum = "continuum.continuum:cli"

[tool.poetry]
packages = [{include = "continuum", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
